fix: List.Item.Meta width overflow (#24992)
* fix: List.Item.Meta width overflow

* refactor: not hide overflow on list-item-content

--- a/components/list/style/index.less
+++ b/components/list/style/index.less
@@ -55,22 +55,21 @@
     align-items: center;
     justify-content: space-between;
     padding: @list-item-padding;
-
-    &-content {
-      color: @text-color;
-    }
+    color: @text-color;
 
     &-meta {
       display: flex;
       flex: 1;
       align-items: flex-start;
-      font-size: 0;
+      max-width: 100%;
 
       &-avatar {
         margin-right: @list-item-meta-avatar-margin-right;
       }
       &-content {
         flex: 1 0;
+        width: 0;
+        color: @text-color;
       }
       &-title {
         margin-bottom: 4px;
